# fabric_data_quality

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  azure-pipelines.yml  check_data.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: COPILOT.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: make-commands-broken.md
.planning/phases/01-repo-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-ci-and-tooling/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-bug-fixes/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-test-coverage/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-storage-abstraction/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md
.planning/phases/06-alert-infrastructure/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md
.planning/phases/07-alert-channels/: 07-01-SUMMARY.md  07-02-SUMMARY.md
.planning/phases/08-schema-evolution/: 08-01-SUMMARY.md  08-02-SUMMARY.md
.planning/phases/09-validation-history/: 09-01-SUMMARY.md  09-02-SUMMARY.md
.planning/phases/10-pipeline-integration/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: causeway_validation.yml  hss_incidents_validation.yml
config_templates/: bronze_layer_template.yml  custom_template.yml  gold_layer_template.yml  silver_layer_template.yml
docs/: .order  API_REFERENCE.md  CONFIGURATION_GUIDE.md  DATA_PROFILING_SOLUTION.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  FABRIC_DEPLOYMENT_GUIDE.md  FABRIC_ETL_INTEGRATION.md  FABRIC_INTEGRATION.md  FABRIC_INTEGRATION_SUMMARY.md  FABRIC_QUICK_START.md  FILE_STRUCTURE.md  INSTALLATION.md  PROFILING_WORKFLOW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  SETUP_COMPLETE.md  dual_platform_architecture_justification.md  generate_pdf.py  test_results_summary.md
dq_framework/: __init__.py  batch_profiler.py  config_loader.py  constants.py  data_profiler.py  fabric_connector.py  ingestion.py  loader.py  schema_tracker.py  storage.py  utils.py  validation_history.py  validator.py
dq_framework/alerting/: __init__.py  circuit_breaker.py  config.py  dispatcher.py  formatter.py  routing.py
dq_framework/alerting/channels/: __init__.py  email.py  factory.py  teams.py
dq_framework/alerting/templates/: adaptive_card.json.j2  summary.html.j2  summary.txt.j2
examples/: aca_commercial_example.yml  aims_data_example.yml  causeway_auto_generated_v1.yml  causeway_financial_enhanced.yml  causeway_financial_example.yml  causeway_financial_generated.yml  complete_workflow_example.py  demo_causeway_validation.py  demo_usage.py  fabric_etl_example.py  hss_incidents_example.yml  profile_causeway_data.py  simple_demo.py  universal_profiler_demo.py  usage_examples.py
scripts/: activate_and_test.sh  profile_data.py
tests/: conftest.py  test_batch_profiler.py  test_config_loader.py  test_data_profiler.py  test_fabric_connector.py  test_ingestion.py  test_integration_pipeline.py  test_loader.py  test_schema_tracker.py  test_storage.py  test_threshold_characterization.py  test_utils.py  test_validation_history.py  test_validator.py
tests/output_parallel_verify/: file1_validation.yml  file2_validation.yml  file3_validation.yml
tests/test_alerting/: test_circuit_breaker.py  test_config.py  test_delivery.py  test_email_channel.py  test_formatter.py  test_routing.py  test_teams_channel.py
webapp/: app.js  index.html  styles.css
