# ==================================================================================
# PyProject Configuration (PEP 518)
# ==================================================================================
# 
# Modern Python project configuration file that replaces setup.cfg
# and provides tool configurations in one place.
#
# ==================================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-data-quality"
version = "1.2.0"
description = "Reusable data quality framework for MS Fabric using Great Expectations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "HS2 Data Engineering Team", email = "data-team@hs2.org.uk"}
]
keywords = ["data-quality", "great-expectations", "microsoft-fabric", "etl", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "great-expectations>=0.18.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pyarrow>=12.0.0,<15.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "xlrd>=2.0.0,<3.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "marshmallow>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
spark = [
    "pyspark>=3.3.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/hs2/fabric-data-quality"
Documentation = "https://github.com/hs2/fabric-data-quality/docs"
Repository = "https://github.com/hs2/fabric-data-quality"
Issues = "https://github.com/hs2/fabric-data-quality/issues"

# ==================================================================================
# Tool Configurations
# ==================================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=dq_framework",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=15",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["dq_framework"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "great_expectations.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101", "B601"]
