# ==================================================================================
# PyProject Configuration (PEP 518)
# ==================================================================================
# 
# Modern Python project configuration file that replaces setup.cfg
# and provides tool configurations in one place.
#
# ==================================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-data-quality"
version = "2.0.0"
description = "Reusable data quality framework for MS Fabric using Great Expectations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "HS2 Data Engineering Team", email = "data-team@hs2.org.uk"}
]
keywords = ["data-quality", "great-expectations", "microsoft-fabric", "etl", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "great-expectations>=1.0.0,<2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pre-commit>=4.0.0",
]
spark = [
    "pyspark>=3.3.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/hs2/fabric-data-quality"
Documentation = "https://github.com/hs2/fabric-data-quality/docs"
Repository = "https://github.com/hs2/fabric-data-quality"
Issues = "https://github.com/hs2/fabric-data-quality/issues"

# ==================================================================================
# Package Discovery
# ==================================================================================

[tool.setuptools.packages.find]
include = ["dq_framework*"]

# ==================================================================================
# Tool Configurations
# ==================================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build/", "dist/", "examples/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dq_framework"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=dq_framework",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["dq_framework"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", "examples/"]
